@@ -7,11 +7,9 @@ import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.AtomicMoveNotSupportedException;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
@@ -692,15 +690,9 @@ public final class ControlledGtpPeer {
 
   private static void writeUnchecked(Path path, String text) {
     try {
-      Path temporary = path.resolveSibling(path.getFileName() + ".tmp");
-      Files.writeString(temporary, text, StandardCharsets.UTF_8);
-      try {
-        Files.move(
-            temporary, path, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING);
-      } catch (AtomicMoveNotSupportedException ignored) {
-        Files.move(temporary, path, StandardCopyOption.REPLACE_EXISTING);
-      }
+      PeerEvidenceFiles.write(path, text);
     } catch (IOException error) {
+      error.printStackTrace();
       throw new UncheckedIOException(error);
     }
   }
